fix: spacings

--- a/src/styles/Assets.css
+++ b/src/styles/Assets.css
@@ -39,7 +39,7 @@ body, html {
   border-radius: 10px;
   max-width: 900px;
   margin-left: 5vw;
-  margin-top: -400px;
+  margin-top: -300px;
 
 }
 
